# text-classifier

./: pyproject.toml  text_classifier.ipynb
.ipynb_checkpoints/: README-checkpoint.md  text_classifier-checkpoint.ipynb
