[tool.poetry]
name = "text-classifier"
version = "0.1.0"
description = ""
authors = ["Oqla Alrefai <2015978054@ses.yu.edu.jo>"]

[tool.poetry.dependencies]
python = "~3.8"
keras = "^2.7.0"
jupyter = "^1.0.0"
matplotlib = "^3.5.0"
numpy = "1.21.1"
pandas = "^1.3.4"
jupyterlab = "^3.2.4"
tensorflow = "^2.7.0"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
